@@ -16,7 +16,6 @@ namespace Castle.Facilities.EventWiring.Tests.Model
 {
 	using System;
 
-	
 	public class PublisherListener
 	{
 		private object _sender;
@@ -41,18 +40,12 @@ namespace Castle.Facilities.EventWiring.Tests.Model
 
 		public bool Listened
 		{
-			get
-			{
-				return _listened;
-			}
+			get { return _listened; }
 		}
 
 		public object Sender
 		{
-			get
-			{
-				return _sender;
-			}
+			get { return _sender; }
 		}
 	}
 }
